--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -19,6 +19,7 @@
         <module>nacos</module>
         <module>feign</module>
         <module>dubbo</module>
+        <module>nacos-config</module>
     </modules>
     
 </project>
