--- a/spring-cloud/spring-cloud-gateway/pom.xml
+++ b/spring-cloud/spring-cloud-gateway/pom.xml
@@ -2,25 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring-cloud</artifactId>
+        <groupId>cn.seasun</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.seasun</groupId>
-    <artifactId>spring-cloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>spring-cloud-gateway</artifactId>
     <packaging>pom</packaging>
+    <modules>
+        <module>gateway-demo01</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <modules>
-        <module>eureka</module>
-        <module>nacos</module>
-        <module>feign</module>
-        <module>dubbo</module>
-        <module>nacos-config</module>
-        <module>spring-cloud-gateway</module>
-    </modules>
-    
 </project>
