--- a/swing-javafx/pom.xml
+++ b/swing-javafx/pom.xml
@@ -14,4 +14,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fifesoft</groupId>
+            <artifactId>rsyntaxtextarea</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
